GNOME Bugzilla – Bug 796809
rtppayload: Fix VP8/VP9/OPUS dual encoding name handling
Last modified: 2018-08-01 13:48:59 UTC
See commit message. This fixes an assertion with the following pipelines: gst-launch-1.0 \ videotestsrc ! vp8enc ! rtpvp8pay ! rtpmux ! fakesink videotestsrc ! vp9enc ! rtpvp9pay ! rtpmux ! fakesink audiotestsrc ! opusenc ! rtpopuspay ! rtpmux ! fakesink
Created attachment 373054 [details] [review] rtppayload: Fix VP8/VP9/OPUS dual encoding name handling All these were copy pasted and would lead to assertion when chained with rtpmux. This commit rewrite the negotiation with downstream. This also drop the fallback to ancient names if the pad is unlinked. This was completly arbitrary decision that made no sense.
Created attachment 373055 [details] [review] rtppayload: Fix VP8/VP9/OPUS dual encoding name handling All these were copy pasted and would lead to assertion when chained with rtpmux. This commit rewrite the negotiation with downstream. This also drop the fallback to ancient names if the pad is unlinked. This was completly arbitrary decision that made no sense.
*** Bug 796808 has been marked as a duplicate of this bug. ***
Oops, git bz file froze and I didn't notice it was properly filed, thanks.
Review of attachment 373055 [details] [review]: Makes sense
Attachment 373055 [details] pushed as 2b11c62 - rtppayload: Fix VP8/VP9/OPUS dual encoding name handling
commit d4a8ec2fb4b133e11ec985a9dcf7859ddfed9d72 (HEAD -> 1.14) Author: Nicolas Dufresne <nicolas.dufresne@collabora.com> Date: Fri Jul 13 22:31:04 2018 -0400 rtppayload: Fix VP8/VP9/OPUS dual encoding name handling